login page completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ flutter:
       - assets/images/dice-4.png
       - assets/images/dice-5.png
       - assets/images/dice-6.png
+      - assets/images/apple.png
+      - assets/images/google.png
+      - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
